# gotreesitter

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  arena.go  benchmark_highlight_test.go  benchmark_query_test.go  benchmark_tagger_test.go  benchmark_test.go  cursor.go  cursor_test.go  external_lexer.go  fuzz_query_test.go  fuzz_tagger_test.go  glr.go  glr_gss.go  glr_test.go  highlight.go  incremental.go  injection_test.go  language.go  language_lookup_test.go  language_test.go  lookahead_test.go  parser.go  parser_api.go  parser_config.go  parser_dfa_token_source.go  parser_reduce.go  parser_scratch.go  parser_tables.go  parser_test.go  perf_metrics_perf.go  perf_metrics_stub.go  query.go  query_compile.go  query_compile_helpers.go  query_matcher.go  query_test.go  rewrite.go  (+4 more)
cgo_harness/: README.md  benchmark_c_baseline_test.go  (+4 more)
grammars/: BUILD.bazel  asm_register.go  blob_source_embedded_core.go  cobol_register.go  correctness_test.go  crystal_register.go  disassembly_register.go  embedded_grammars_gen.go  embedded_loader.go  graphql_register.go  hcl_register.go  highlight_validation_test.go  jinja2_register.go  language_set_core.go  languages.manifest  llvm_register.go  matlab_register.go  parse_support_test.go  prolog_register.go  purescript_scanner.go  python_scanner.go  registry.go  registry_test.go  scss_query_smoke_test.go  smoke_samples.go  sparql_register.go  support.go  templ_register.go  top50_correctness_test.go  tsx_isolation_test.go  tsx_parser_test.go  tsx_query_smoke_test.go  turtle_register.go  yuck_scanner.go  zzz_scanner_attachments.go
(+13 files in other folders)
